# meeting-cpp-2017

./: .gitignore  Dockerfile  README.md
code/: requirements.txt
code/common/: socket.cpp  socket.h
code/cudnn/: Makefile  README.md  conv.cu
code/dlib/: Makefile  README.md  lenet.cpp
code/kernel/: .bash_history
code/kernel/cpu/: cpp_con_sigmoid.py
code/kernel/cpu+gpu/: Makefile  test.py
code/mkl/: Makefile  README.md  conv  conv.cpp
code/mkl/conv.dSYM/Contents/: Info.plist
code/mxnet/: Makefile  README.md  download_mnist.sh  lenet  lenet-server  lenet.cpp  lenet_server.cpp  ref.cpp
code/mxnet/canvas/: .qmake.stash  Makefile  backend.cpp  backend.h  main.cpp  main.pro  main.qml  main.qmlc  moc_backend.cpp  qrc_qml.cpp
code/mxnet/demo/: Makefile  backend.cpp  main.pro  main.qml
code/tf-graph/: Makefile  README.md  infogan.py  load-graph-server  load-graph-server.cpp  load-graph.cpp
code/tf-graph/demo/: .qmake.stash  CMakeLists.txt  Makefile  backend.cpp  backend.h  main.cpp  main.pro  main.qml
code/tf-kernel/: README.md
code/tf-kernel/cpu/: Makefile  kernel.cpp  test.py
code/tf-kernel/cpu+gpu/: kernel.cpp  kernel.cu  kernel.cuh
code/zero-out/: zero_out.cc
presentation/: notes.md  preamble.tex  presentation.tex
presentation/slides/: down.css  down.tex  intro.tex  outro.tex  title.tex  up.css  up.tex
presentation/slides/down/: graph.tex  hardware.tex  kernel.tex  layer.tex  model.tex  op.tex  task.tex
presentation/slides/up/: graph.tex  hardware.tex  kernel.tex  layer.tex  model.tex  op.tex
(+1 files in other folders)
